# BikeRouteGen

./: .gitignore  CODE_HEALTH_WORKPLAN.md  LICENSE  PROJECT_CONTEXT.md  Procfile  README.md  ROUTE_ALGO_WORKPLAN.md  conftest.py  discord_bot.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  webapp.py
.github/workflows/: tests.yml
static/: app.js  map.js
templates/: about.html  base.html  index.html  results.html
tests/: test_generate_concurrency.py  test_learn_regions.py  test_observability.py  test_providers.py  test_regions.py  test_surface_quality.py  test_webapp.py  test_weights.py  test_wind.py
windroute/: __init__.py  cli.py  corrections.py  engine.py  geocode.py  geometry.py  learn.py  models.py  planner.py  regions.py  render.py  routing.py  rwgps.py  scoring.py  surface.py  valhalla.py  wind.py  zones.py
